[package]
name = "slk"
version = "0.1.0"
authors = ["xorphitus <xorphitus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
